# praxes

./: .bzrignore  .gitattributes  .gitignore  .gitmodules  .hgignore  .hgtags  .travis.yml  CHANGELOG  CHANGES  CHANGES.txt  DEVNOTES  INSTALL  License.txt  MANIFEST.in  Phynx.e4p  README  README.txt  SpecClient  TODO  XRDdefaults.py  XRDproject.e4p  associate_pkqq.ui  associationtree.ui  bckndinventoryDialog.ui  chessrunattr.ui  chi_params.ui  chiqDialog.ui  create_db  dep_prof.ui  editrawxrdDialog.ui  highlowDialog.ui  import_attr.ui  mainmenu.ui  make_phases_menu.ui  pdfDialog.ui  pdfsearch.ui  setup.cfg  setup.py  setup_data.py  setupbase.py  (+40 more)
.eric4project/: Phynx.e4q  Phynx.e4t  project-apis.db  xpaxs.e4q  xpaxs.e4t
Phynx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SpecClient/: Spec.py  SpecArray.py  SpecChannel.py  SpecClientError.py  SpecCommand.py  SpecConnection.py  SpecConnectionsManager.py  SpecCounter.py  SpecEventsDispatcher.py  SpecMessage.py  SpecMotor.py  SpecReply.py  SpecScan.py  SpecServer.py  SpecVariable.py  SpecWaitObject.py  __init__.py  clientutils.mac
conda.recipe/: bld.bat  build.sh  meta.yaml  run_test.py
data/: process_elam_db.py  process_henkedb.py  process_waasmaierdb.py
doc/: DEVNOTES  INSTALL  LICENSE  Macro.txt  Makefile  TODO  cmdlog.txt  conf.py  constants.rst  contents.rst  devintro.rst  do_sphinx.py  glossary.rst  index.rst  introduction.rst  license.rst  make.bat  make.py  methods for asyn spec motors.rtf  optics.rst  sources.rst  userguide.rst  xpaxs_api.rst
phynx/: base.py  dataset.py  entry.py  group.py  measurement.py  multichannelanalyzer.py  registry.py  setup.py  version.py
phynx.egg-info/: PKG-INFO  SOURCES.txt
praxes/: __init__.py  _version.py  decorators.py  rlock.pyx
scripts/: combi  gamepad  praxes_win_post_install.py  smp  sxfm  xpaxs  xpaxs_reformat_file  xpaxs_win_post_install.py
smp/: configutils.py
spectromicroscopy/: AddMonVarMac.py  AsyncTest.py  GearHead.py  GearHead.ui  GearHead_backup.ui  GearTester.py  GearTester.ui  Konsole.py  Konsole.ui  KonsoleGui.py  MotorGui.py  MotorGui2.py  SMP.py  SMP.ui  SMPGui.py  SpecConfig.py  SpecRunner.py  SpecSetter.py  SpecSetter.ui  Testplot.py  Xp.py  Xp.ui  XpGui.py  XpMaster.py  XpMaster.ui  XpSetup.py  XpSetup.ui  XpSetupGui.py  XpWatcher.py  XpWatcher.ui  XpWatcherGui.py  __init__.py  log.txt
tests/: citrus_leaves_17p2keV_epics_1us_blc.cfg  test_file.py
(+830 files in other folders)
