[metadata]
author = Darren Dale
author_email = python-phynx-developers@lists.launchpad.net
classifiers = Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Programming Language :: Python
	Topic :: Scientific/Engineering
	Topic :: Database
	Topic :: Software Development :: Libraries :: Python Modules
	Operating System :: Unix
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
description = An extensible high-level interface for complex HDF5 data
download_url = http://pypi.python.org/pypi/phynx/
install_requires = numpy >= 1.2.0
	h5py >=1.2.0
license = BSD
long_description = Phynx is an extensible high-level interface for working with
	complex HDF5 data, building on the h5py package.
name = Phynx
platforms = Any
requires = python (>=2.5.0)
	hdf5 (>=1.8.4)
	h5py (>=1.2.0)
url = http://packages.python.org/phynx/
version = 0.10.96
zip_safe = False

[metadata.extras_require]
traits = Traits >= 3.2.0
traits_qt4 = Traits[qt4] >= 3.2.0

[egg_info]