[metadata]
author = Darren Dale
author_email = xpaxs-developers@lists.launchpad.net
classifiers = Development Status :: 4 - Beta
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Programming Language :: Python
	Topic :: Scientific/Engineering
	Topic :: Database
	Topic :: Software Development :: Libraries :: Python Modules
	Operating System :: Unix
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
description = Extensible Packages for X-ray Science
download_url = http://pypi.python.org/pypi/xpaxs
install_requires = matplotlib >= 0.98.3
	phynx >= 0.10.0
license = GPL
long_description = XPaXS provides a python interface for data acquisition and
	analysis in the field of X-ray science.
name = XPaXS
platforms = Any
requires = python (>=2.6, <3.0)
	PyQt4 (>=4.5.2)
url = http://packages.python.org/xpaxs/
version = 0.10.96
zip_safe = False

[metadata.extras_require]
parallel = pp >= 1.5.6
fluorescence = PyMca >= 4.4.0

[egg_info]

[nosetests]
#verbosity=1
#detailed-errors
#with-coverage=1
#cover-package=xpaxs
#debug=nose.loader
#pdb=1
#pdb-failures=1

